# duma_erp

./: .dockerignore  .env.example  .gitignore  ACCOUNTANT_INTERFACE.md  ACCOUNTANT_REPORTS.md  BACKEND_API.md  BACKEND_OVERVIEW.md  CLAUDE.md  DEPLOY.md  DOCUMENT_GENERATION.md  Dockerfile  FRONTEND_REFACTORING_PLAN.md  MANAGER_REPORTS.md  README.md  TASKS.md  docker-compose.yml  erp_spec.md  pyproject.toml  railway.toml  todo.md
.claude/: settings.local.json
alembic/: env.py
docs/: BILLING_ACCOUNT_REFUNDS_PLAN.md  BUDGET_ADVANCES_PLAN.md  BULK_PO_CSV.md  BULK_STOCK_CSV.md  CLOUDFLARE_R2.md  FAMILY_BILLING_PLAN.md  FAMILY_FIRST_CREATION_PLAN.md  HR_EMPLOYEES_PLAN.md  ISSUE_FORM.md  MPESA_C2B.md  PAID_ACTIVITIES_PLAN.md  PAYMENT_CONFIRMATION_UPLOADS.md  REAL_CASH_PNL_PLAN.md  UNIFORM_KITS.md  WITHDRAWAL_SETTLEMENT_PLAN.md
frontend/: MUI_TO_TAILWIND_MIGRATION.md  README.md  REFACTORING_SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: README.md  audit_discounted_invoice_allocations.py  audit_financial_integrity.py  backfill_reservation_issued_from_issuances.py  backfill_reservation_issued_from_issuances_railway.sh  export_active_term_students_invoices.py  export_active_term_students_invoices_railway.sh  export_student_uniform_issuances.py  export_student_uniform_issuances_railway.sh  mpesa_register_c2b_urls.py  repair_discounted_invoice_allocations.py  repair_financial_integrity.py  reset_invoices.py  reset_invoices_local.sh  reset_invoices_railway.sh  reset_payments.py  seed_demo_data.py
src/: main.py
tests/: conftest.py
(+381 files in other folders)
